--- a/index.html
+++ b/index.html
@@ -1,64 +1,33 @@
 <!DOCTYPE html>
 <html lang="my">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Auto Reply Formatter</title>
   <style>
-    body { font-family: "Noto Sans Myanmar", sans-serif; padding: 20px; max-width: 600px; margin: auto; }
-    textarea, pre { width: 100%; font-size: 16px; }
-    textarea { height: 150px; }
-    pre { background: #f0f0f0; padding: 10px; border-radius: 5px; white-space: pre-wrap; max-height: 200px; overflow-y: auto; }
+    body { font-family: sans-serif; padding: 20px; background: #f9f9f9; }
+    textarea, pre { width: 100%; height: 150px; margin-top: 10px; font-size: 16px; padding: 10px; }
     button { margin-top: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+    .result { background: #fff; border: 1px solid #ccc; white-space: pre-wrap; }
   </style>
 </head>
 <body>
+  <h2>📋 Auto Reply Formatter</h2>
+  <p>စာတွေကို တစ်ကြောင်းချင်းရေးပါ:</p>
+  <textarea id="inputText" placeholder="စာတစ်ကြောင်းချင်းရေး..."></textarea>
+  <button onclick="formatReplies()">ပြီးပြီ</button>
+  <h3>Formatted Result:</h3>
+  <pre class="result" id="outputText"></pre>
 
-<h2>Auto Reply Formatter</h2>
-
-<textarea id="inputText" placeholder="စာတွေတစ်ကြောင်းချင်းရေးပါ..."></textarea><br>
-<button onclick="formatReplies()">ပြီးပြီ</button>
-
-<h3>Formatted Result:</h3>
-<pre id="output"></pre>
-<button onclick="copyOutput()">📋 ကော်ပီ</button>
-
-<script>
-function formatReplies() {
-  const input = document.getElementById("inputText").value.trim();
-  const lines = input.split("\n").map(line => line.trim()).filter(line => line.length > 0);
-  if (lines.length === 0) {
-    alert("စာတွေထည့်ပါ");
-    return;
-  }
-  let result = "auto_replies = [\n";
-  for (let i = 0; i < lines.length; i++) {
-    result += `   "${lines[i]}",\n`;
-  }
-  result = result.trimEnd().replace(/,$/, '') + "\n]";
-  document.getElementById("output").textContent = result;
-}
-
-function copyOutput() {
-  const text = document.getElementById("output").textContent;
-  if (!text) {
-    alert("မဖော်မပြတာလား။ အရင် format ပြင်ပါ။");
-    return;
-  }
-
-  // Fallback clipboard copy using textarea
-  const tempInput = document.createElement("textarea");
-  tempInput.value = text;
-  document.body.appendChild(tempInput);
-  tempInput.select();
-  try {
-    document.execCommand("copy");
-    alert("📋 ကော်ပီပြီးပါပြီ!");
-  } catch (err) {
-    alert("ကော်ပီမရပါ။");
-  }
-  document.body.removeChild(tempInput);
-}
-</script>
-
+  <script>
+    function formatReplies() {
+      const lines = document.getElementById("inputText").value
+        .trim()
+        .split("\n")
+        .map(line => `"${line.trim()}"`)
+        .filter(line => line !== '""');
+      const result = `auto_replies = [\n  ${lines.join(",\n  ")}\n]`;
+      document.getElementById("outputText").textContent = result;
+    }
+  </script>
 </body>
 </html>
